--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
-    <h1>FAQ</h1>
+    <h1>CSS Accordion</h1>
 
 <div class="accordion">
   <div class="accordion-item">
     <div class="accordion-item-header">
-      What is Web Development?
+      What is your name?
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        Web Development broadly refers to the tasks associated with developing functional websites and applications for the Internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks.
+        My name is gokul
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <div class="accordion-item-header">
-      What is HTML?
+      Where you from?
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        HTML, aka HyperText Markup Language, is the dominant markup language for creating websites and anything that can be viewed in a web browser.
+        India
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <div class="accordion-item-header">
-      What are some basic technical skills of a Front-End developer?
+      how are you today?
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
@@ -57,21 +57,21 @@
   </div>
   <div class="accordion-item">
     <div class="accordion-item-header">
-      What is HTTP?
+      What is god?
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        HTTP, aka HyperText Transfer Protocol, is the underlying protocol used by the World Wide Web and this protocol defines how messages are formatted and transmitted, and what actions Web servers and browsers should take in response to various commands.
+        fsdfsdfsdf
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <div class="accordion-item-header">
-      What is CORS?
+      What is sdfsdfsdf?
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        CORS, aka Cross-Origin Resource Sharing, is a mechanism that enables many resources (e.g. images, stylesheets, scripts, fonts) on a web page to be requested from another domain outside the domain from which the resource originated.
+        sdfsdfsdfsdfsd
       </div>
     </div>
   </div>
